# mongoose-Demon

./: CMakeLists.txt
client/: client.cpp
data/: config.ini
mysql/: DBConfig.h  dBConnection_mysql.cpp  dBConnection_mysql.h  test.cpp
server/: server.cpp
